remove character spacing from nav bar to resolve responsive scaling issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ h1, h2 {
 
 #navigation_bar {
     font-size:115%;
-    letter-spacing: 4px;
+    
     
 }
 
